--- a/css/styles.css
+++ b/css/styles.css
@@ -156,8 +156,9 @@ a:hover, a:focus {
   position: relative;
   margin-bottom: 20px;
 
-  width:100%
+  
   height:100%;
+  background-size: 100% 100%;
 
 }
 .carousel-inner{
